tests/should-fail/use-the-import-of-an-import.ls
-- dom imports std; let's try to use std functions through dom!
import dom;

main = map (\x -> x) [1,2,3];
